# taptain

./: .gitignore  Cargo.toml  build.sh  taptain.ino  upload.sh
examples/: config.toml
src/: command.rs  comms.rs  config.rs  core.rs  events.rs  main.ino  main.rs  protocol.rs  tasks.rs  views.rs
src/board/: App.ino  CircularBuffer.h  Colors.h  CommandBuffer.h  Config.h  Error.cpp  Error.h  IDrawable.h  Message.h  Request.h  Touch.h  Widget.cpp  Widget.h  main.ino
src/builtin/: cpu.rs
