[package]
name = "taptain"
version = "0.1.0"
authors = ["Dmitry Polyanitsa <coffeecup.winner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.4"
serde = { version = "1.0.124", features = ["derive"] }
serial = "0.4.0"
sysinfo = "0.16.5"
toml = "0.5.8"
